fix overflow on main

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
 // ---------------
 
 main {
-	overflow: auto;
+	overflow: hidden;
 }
 
 // See "controlstrip" for header layout
